--- a/front-end/src/app/components/navbar/navbar.html
+++ b/front-end/src/app/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav ng-controller="NavbarController as nav" class="navbar navbar-static-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
@@ -6,11 +6,13 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+    <div style="background-color: red;" class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
         <li class="active"><a ng-href="#">Home</a></li>
         <li><a ng-href="#">About</a></li>
         <li><a ng-href="#">Contact</a></li>
+        <li><a ui-sref="auth" ng-hide="nav.isAuthenticated()">Login</a></li>
+        <li><a ui-sref="auth.logout()" ng-show="nav.isAuthenticated()">Logout</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
