--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -1,25 +1,61 @@
-``
 <h1 class="page-header">Register.</h1>
-<div class="center-panel center-block">
+<div class="container">
   <form name="register" ng-submit="auth.register()">
-    <div class="form-group">
-      <input ng-model="auth.name" type="text" class="form-control col-md-12 special-field" placeholder="Real Name (optional)" />
+    <div class="col-md-6">
+      <div class="form-group">
+        <input ng-model="auth.user.name" type="text" class="form-control col-md-12 special-field" placeholder="Real Name" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.ingame" type="text" class="form-control col-md-12 special-field" placeholder="In-Game Name" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.email" type="email" class="form-control col-md-12" placeholder="Email" ng-model="auth.user.email" />
+      </div>
+      <div class="form-group">
+        <input type="email" class="form-control col-md-12" placeholder="Confirm Email" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.pwd" name="pwd" type="password" class="form-control col-md-12" placeholder="Password" />
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control col-md-12" compare-to="auth.user.pwd" placeholder="Confirm Password" name="pwdConfirm" ng-model="pwdConfirm" />
+      </div>
+      <span ng-show="register.pwdConfirm.$dirty && register.pwdConfirm.$invalid">Passwords do not match</span>
     </div>
-    <div class="form-group">
-      <input ng-model="auth.user.email" type="email" class="form-control col-md-12" placeholder="Email" ng-model="auth.user.email" />
+    <div class="col-md-6">
+      <div class="form-group">
+        <input ng-model="auth.user.mmr" type="number" class="form-control col-md-12 special-field" placeholder="MMR" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.totalGames" type="number" class="form-control col-md-12 special-field" placeholder="Total Games Played" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.gamesWon" type="number" class="form-control col-md-12 special-field" placeholder="Games Won" />
+      </div>
+      <div class="form-group">
+        <input ng-model="auth.user.gamesLost" type="number" class="form-control col-md-12 special-field" placeholder="Games Lost" />
+      </div>
+      <div class="form-group">
+        <div>
+          <input ng-model="auth.user.position1" type="checkbox">One (Carry)</input>
+        </div>
+        <div>
+          <input ng-model="auth.user.position2" type="checkbox">Two (Mid)</input>
+        </div>
+        <div>
+          <input ng-model="auth.user.position3" type="checkbox">Three (Offlane)</input>
+        </div>
+        <div>
+          <input ng-model="auth.user.position4" type="checkbox">Four (Support)</input>
+        </div>
+        <div>
+          <input ng-model="auth.user.position5" type="checkbox">Five (Hard Support)</input>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <input type="email" class="form-control col-md-12" placeholder="Confirm Email" />
-    </div>
-    <div class="form-group">
-      <input ng-model="auth.user.pwd" name="pwd" type="password" class="form-control col-md-12" placeholder="Password" />
-    </div>
-    <div class="form-group">
-      <input type="password" class="form-control col-md-12" compare-to="auth.user.pwd" placeholder="Confirm Password" name="pwdConfirm" ng-model="pwdConfirm" />
-    </div>
-    <span ng-show="register.pwdConfirm.$dirty && register.pwdConfirm.$invalid">Passwords do not match</span>
     <div class="center-button">
       <button class="btn btn-default button-panel-button center-block" ng-disabled="register.pwdConfirm.$invalid" type="submit">Register</button>
     </div>
   </form>
+</div>
 </div>
