--- a/front-end/src/app/main/main.html
+++ b/front-end/src/app/main/main.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 </div>
-<div class="container">
+<!-- <div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">Post A Message</div>
         <div class="panel-body">
@@ -24,13 +24,13 @@
         <div class="panel-body">
             <ul class="list-group">
                 <li class="list-group-item" ng-repeat="message in main.messages">
-                    {{message.msg}} {{message.user.email}}
+                    {{message.msg}} <br />{{message.user.email}}
                 </li>
             </ul>
         </div>
     </div>
 
-</div>
+</div> -->
 
 <footer>
     <div class="container clear-top navbar-fixed-bottom">
