--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -1,7 +1,11 @@
-<h1 class="page-header">{{event.name}}<h1>
-    <h2 class="text-center">{{event.date}}</h2>
-    <h3 class="text-center">{{event.players}}</h3>
+<h1 class="page-header">{{events.event.name}}<h1>
+    <h2 class="text-center">{{events.event.date.substring(0, 10)}}</h2>
+    <h3 class="text-center">{{events.event.players}}</h3>
+    <h3 class="text-center">{{events.event.bestOf}}</h3>
+    <h3 class="text-center">{{events.event.format}}</h3>
+
+    <h3 class="text-center">{{events.event.admin.name}}</h3>
 
 <div class="container">
-    <p>Other stuff should show up here.</p>
+    <p>{{}}</p>
 </div>
