Attempt to fix players not showing

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -22,7 +22,7 @@
     <div class="col-md-6">
       <div class="form-group">
         <input ng-model="auth.user.steam_id" type="number" class="form-control col-md-12 special-field" placeholder="Steam ID" />
-        <p>This can be found using <a href=""><strong>this resource.</strong></a></p>
+        <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p>
       </div>
     </div>
     <div class="center-button">
