--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">{{events.event.name}}<h1>
     <h2 class="text-center">Date: {{events.event.date.substring(0, 10)}}</h2>
-    <h3 class="text-center">Players: {{events.event.players}}</h3>
+    <h3 class="text-center" ng-repeat="player in events.event.players">Players: <a href="">{{player.ingame}}</a></h3>
     <h3 class="text-center">Best of: {{events.event.bestOf}}</h3>
     <h3 class="text-center">Elimination: {{events.event.format}}</h3>
 
