--- a/front-end/src/app/dashboard/dashboard.html
+++ b/front-end/src/app/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="col-md-6 text-center">
-        <h2>{{dashboard.total_games}} games played</h2>
+        <h2>{{dashboard.total_games}} games played with a {{dashboard.win_rate}}% win rate</h2>
         <p>{{dashboard.wins}}W - {{dashboard.losses}}L</p>
     </div>
     <div class="col-md-6 text-center">
