--- a/front-end/src/app/events/addevent.html
+++ b/front-end/src/app/events/addevent.html
@@ -7,11 +7,11 @@
         <input ng-model="events.event.date" type="date" class="form-control special-field" placeholder="Event Start Date" />
       </div>
       <div class="form-group">
-        <input ng-model="events.event.format" name="format" type="radio" value="bo3">Single Elimination <br />
-        <input ng-model="events.event.format" name="format" type="radio" value="bo5">Double Elimination
+        <input ng-model="events.event.format" name="format" type="radio" value="Single">Single Elimination <br />
+        <input ng-model="events.event.format" name="format" type="radio" value="Double">Double Elimination
       </div>
       <div class="form-group">
-        Series are best of <input ng-model="events.event.bestOf" type="number" value="3" />
+        Series are best of <input ng-model="events.event.bestOf" type="number" placeholder="3" />
       </div>
       <div class="form-group">
         Player dotaLan emails, separated by commas <input ng-model="events.event.players" type="text" />
