Improve UI and fix multi-user event adding

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -6,9 +6,6 @@
         <input ng-model="auth.user.name" type="text" class="form-control col-md-12 special-field" placeholder="Real Name" />
       </div>
       <div class="form-group">
-        <input ng-model="auth.user.ingame" type="text" class="form-control col-md-12 special-field" placeholder="In-Game Name" />
-      </div>
-      <div class="form-group">
         <input ng-model="auth.user.email" type="email" class="form-control col-md-12" placeholder="Email" ng-model="auth.user.email" />
       </div>
       <div class="form-group">
@@ -24,6 +21,10 @@
         <input ng-model="auth.user.steam_id" type="number" class="form-control col-md-12 special-field" placeholder="Steam ID" />
         <p>CONNER - Your SteamID3 is 345237110</p>
         <p>HAMILTON - 218135898</p>
+        <p>CAMERON - 62566806</p>
+        <p>FRANK - 84979662</p>
+        <p></p>
+        <p></p>
         <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p>
       </div>
     </div>
