--- a/front-end/src/app/main/main.html
+++ b/front-end/src/app/main/main.html
@@ -1,14 +1,26 @@
-<div class="container body">
-  <h1 class="welcome-header">Welcome to dotaLAN.</h1>
-  <div class="button-panel center-block">
-    <div class="col-md-6">
-      <a class="btn btn-default button-panel-button" ui-sref="login">Log in</a>
-    </div>
-    <div class="col-md-6">
-      <button class="btn btn-default button-panel-button" type="button" value="Register" ui-sref="register">Register</a>
-    </div>
-  </div>
+<div class="masthead-banner">
+    <h1 class="welcome-header">Welcome to dotaLAN.</h1>
 </div>
+<div class="container body">
+    <div class="button-panel center-block">
+        <div class="col-md-6">
+            <a class="btn btn-default button-panel-button" ui-sref="login">Log in</a>
+        </div>
+        <div class="col-md-6">
+            <button class="btn btn-default button-panel-button" type="button" value="Register" ui-sref="register">Register</a>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="container clear-top navbar-fixed-bottom">
+        <p>
+            Made by <a class="custom-link" href="http://cwgillette.com">Conner Gillette</a>.
+        </p>
+    </div>
+</footer>
+
+
+<!-- Old Tutorial Code - Message Handling -->
 <!-- <div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">Post A Message</div>
@@ -31,11 +43,3 @@
     </div>
 
 </div> -->
-
-<footer>
-    <div class="container clear-top navbar-fixed-bottom">
-        <p class="text-center">
-            Made by <a class="custom-link" href="http://cwgillette.com">Conner Gillette</a>.
-        </p>
-    </div>
-</footer>
