Add users to make an even 10

--- a/front-end/src/app/dashboard/dashboard.html
+++ b/front-end/src/app/dashboard/dashboard.html
@@ -7,7 +7,7 @@
             <p>{{dashboard.wins}}W - {{dashboard.losses}}L</p>
             <p>{{dashboard.mmr}} Solo MMR, {{dashboard.mmr_est}} Estimated</p>
             <p>Most Played Hero: {{dashboard.topHero.localized_name}}</p>
-            <p>Lane Role: {{dashboard.lane_role}}</p>
+            <!-- <p>Lane Role: {{dashboard.lane_role}}</p> -->
     </div>
     <div class="col-md-6 events">
         <h2><strong>Events<strong></h2>
