--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -23,8 +23,12 @@
         <p>HAMILTON - 218135898</p>
         <p>CAMERON - 62566806</p>
         <p>FRANK - 84979662</p>
-        <p></p>
-        <p></p>
+        <p>BABYRAGE - 398892298</p>
+        <p>UW BRAD - 105999791</p>
+        <p>HAYDEN - 106935421</p>
+        <p>BRAD - 192389582</p>
+        <p>SEAN - 243188200</p>
+        <p>EARLL - 202928695</p>
         <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p>
       </div>
     </div>
