Add foundation for team organization

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -22,7 +22,7 @@
         <p>CONNER - Your SteamID3 is 345237110</p>
         <p>HAMILTON - 218135898</p>
         <p>CAMERON - 62566806</p>
-        <p>FRANK - 84979662</p>
+        <p>PHILLIP - 218193475</p>
         <p>BABYRAGE - 398892298</p>
         <p>UW BRAD - 105999791</p>
         <p>HAYDEN - 106935421</p>
