--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -11,5 +11,6 @@
     </div>
     <div class="col-md-6 events">
         <h2><strong>Event Details<strong></h2>
+        <button ng-click="events.createTeams()" type="submit" class="btn btn-default button-panel-button center-block">Add Event</button>
     </div>
 </div>
