--- a/front-end/src/app/index.scss
+++ b/front-end/src/app/index.scss
@@ -34,6 +34,10 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
+.hidden {
+    display: none;
+}
+
 .page-header {
     text-align: center;
     font-size: 50px;
