Add minor event functionality

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -29,6 +29,9 @@
         <p>BRAD - 192389582</p>
         <p>SEAN - 243188200</p>
         <p>EARLL - 202928695</p>
+
+        conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, uwbrad@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
+
         <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p> -->
       </div>
     </div>
