--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -18,12 +18,17 @@
                     <h3>Average MMR: {{team.average_mmr}}</h3>
                 </div>
             </div>
-        <button ng-click="events.createTeams()" type="submit" class="btn btn-default button-panel-button center-block">Create Teams</button>
-        <button id="schedule-button" onclick="hideScheduleButton()" ng-click="events.createSchedule()" type="submit" class="btn btn-default button-panel-button center-block">Create Schedule</button>
+        <button id="teams-button" ng-click="events.createTeams()" onclick="hideButton('teams')" type="submit" class="btn btn-default button-panel-button center-block">Create Teams</button>
+        <div class="dashboard-event-container" ng-repeat="series in events.event.schedule.series_list">
+            <div class="dashboard-event">
+                <h3>{{series.radiant.name}} VS. {{series.dire.name}}</h3>
+            </div>
+        </div>
+        <button id="schedule-button" onclick="hideButton('schedule')" ng-click="events.createSchedule()" type="submit" class="btn btn-default button-panel-button center-block">Create Schedule</button>
     </div>
 </div>
 <script>
-    function hideScheduleButton(){
-        document.getElementById("schedule-button").classList.add("hidden");
+    function hideButton(button){
+        document.getElementById(button + "-button").classList.add("hidden");
     }
 </script>
