Tweak small aspects of events and dashboard control

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -19,7 +19,7 @@
     <div class="col-md-6">
       <div class="form-group">
         <input ng-model="auth.user.steam_id" type="number" class="form-control col-md-12 special-field" placeholder="Steam ID" />
-        <!-- <p>CONNER - Your SteamID3 is 345237110</p>
+        <p>CONNER - Your SteamID3 is 345237110</p>
         <p>HAMILTON - 218135898</p>
         <p>CAMERON - 62566806</p>
         <p>PHILLIP - 218193475</p>
@@ -32,7 +32,7 @@
 
         conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, uwbrad@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
 
-        <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p> -->
+        <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p>
       </div>
     </div>
     <div class="center-button">
