--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -20,15 +20,28 @@
     </div>
     <button id="teams-button" ng-click="events.createTeams()" onclick="hideButton('teams')" type="submit" class="btn btn-default button-panel-button center-block">Create Teams</button>
     <div class="dashboard-event-container">
-      <div class="dashboard-event">
-        <h3>{{events.schedule.radiant.name}} VS. {{events.schedule.dire.name}}</h3>
+      <div class="dashboard-event" ng-repeat="series in events.schedule">
+        <a href="#{{series._id}}" data-toggle="collapse" aria-expanded="false" aria-controls="{{series._id}}">
+          <h3>{{series.radiant.name}} VS. {{series.dire.name}}</h3>
+          <div id="{{series._id}}" class="collapse">
+            <div>
+              <p>Lorem ipsum dolor sit amet, consecteur...</p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
-    <button id="schedule-button" onclick="hideButton('schedule')" ng-click="events.createSchedule()" type="submit" class="btn btn-default button-panel-button center-block">Create Schedule</button>
+    <button id="schedule-button " onclick="hideButton(  'schedule') " ng-click="events.createSchedule() " type="submit " class="btn btn-default button-panel-button center-block ">Create Schedule</button>
   </div>
 </div>
 <script>
+  angular.module('app', ['ui.bootstrap']);
+
   function hideButton(button) {
-    // document.getElementById(button + "-button").classList.add("hidden");
+    // document.getElementById(button + "-button ").classList.add("hidden ");
+  }
+
+  function expand(id) {
+    document.getElementById(id).style.height
   }
 </script>
