--- a/front-end/src/app/events/addevent.html
+++ b/front-end/src/app/events/addevent.html
@@ -16,7 +16,7 @@
       <div class="form-group">
         Player dotaLan emails, separated by commas <input ng-model="events.event.players" type="text" />
       </div>
-      <p>conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, uwbrad@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
+      <p>conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, bradwakida@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
 </p>
     </div>
     <div class="center-button">
