--- a/front-end/src/app/events/event.html
+++ b/front-end/src/app/events/event.html
@@ -19,10 +19,16 @@
                 </div>
             </div>
         <button id="teams-button" ng-click="events.createTeams()" onclick="hideButton('teams')" type="submit" class="btn btn-default button-panel-button center-block">Create Teams</button>
-        <div class="dashboard-event-container" ng-repeat="series in events.event.schedule.series_list">
-            <div class="dashboard-event">
-                <h3>{{series.radiant.name}} VS. {{series.dire.name}}</h3>
-            </div>
+        <div class="dashboard-event-container">
+          <div class="dashboard-event" ng-repeat="series in events.schedule">
+            <!-- <a href="#{{series._id}}" data-toggle="collapse" aria-expanded="false" aria-controls="{{series._id}}"> -->
+              <h3>{{series.radiant.name}} VS. {{series.dire.name}}</h3>
+              <div id="{{series._id}}" class="collapse">
+                <div>
+                  <p>Lorem ipsum dolor sit amet, consecteur...</p>
+                </div>
+              </div>
+            </a>
         </div>
         <button id="schedule-button" onclick="hideButton('schedule')" ng-click="events.createSchedule()" type="submit" class="btn btn-default button-panel-button center-block">Create Schedule</button>
     </div>
