Start implementing multi-team generation

--- a/front-end/src/app/events/addevent.html
+++ b/front-end/src/app/events/addevent.html
@@ -16,7 +16,7 @@
       <div class="form-group">
         Player dotaLan emails, separated by commas <input ng-model="events.event.players" type="text" />
       </div>
-      <p>conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, bradwakida@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
+      <p>conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, bradwakida@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com, random@dotalan.com, amorak@dotalan.com, andrei@dotalan.com, burnz@dotalan.com, chase@dotalan.com, austin@dotalan.com, edward@dotalan.com, edward@dotalan.com, spot@dotalan.com, allz@dotalan.com, asmr@dotalan.com
 </p>
     </div>
     <div class="center-button">
