Fix new team generation system and user email inconsistency

--- a/front-end/src/app/auth/register.html
+++ b/front-end/src/app/auth/register.html
@@ -29,9 +29,20 @@
         <p>BRAD - 192389582</p>
         <p>SEAN - 243188200</p>
         <p>EARLL - 202928695</p>
+        <p>...</p>
+        <p>ASMR - 81376999</p>
+        <p>ANDREI - 220658513</p>
+        <p>BURNZ - 74357807</p>
+        <p>CHASE - 63037353</p>
+        <p>AUSTIN - 134572999</p>
+        <p>SPOT - 192571321</p>
+        <p>ALLZ - 115231153</p>
+        <p>EDWARD - 63225975</p>
+        <p>AMORAK - 100758702</p>
+        <p>RANDOM (WONKADONK) - 336747443</p>
 
-        conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, uwbrad@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com
-
+        conner@dotalan.com, hamilton@dotalan.com, cameron@dotalan.com, phillip@dotalan.com, babyrage@dotalan.com, bradwakida@dotalan.com, hayden@dotalan.com, brad@dotalan.com, sean@dotalan.com, alex@dotalan.com, random@dotalan.com, amorak@dotalan.com, andrei@dotalan.com,
+        burnz@dotalan.com, chase@dotalan.com, austin@dotalan.com, edward@dotalan.com, spot@dotalan.com, allz@dotalan.com, asmr@dotalan.com
         <p>This can be found using <a href="http://steamidfinder.com/" target="_blank"><strong>this resource.</strong></a>You need to use the 'Steam 3 ID' option.</p>
       </div>
     </div>
